--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
   },
   "devDependencies": {
     "@babel/plugin-transform-private-property-in-object": "^7.27.1",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "tailwindcss": "^3.4.15"
   }
 }
